Add user signup/login button

--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -22,21 +22,24 @@
             </div>
         </div>
     </div>
-    <!-- Copy URL, Upload, and Download Bar -->
-    <div class="share-bar bar flex-container canvas-component">
-        <div id="copy" class="bar-button tool-tip">
-            <i class="fa fa-clipboard"></i>
-            <span class="tool-tip-text">Copy URL</span>
+    <div class="top-right-bar canvas-component flex-container">
+        <!-- Copy URL, Upload, and Download Bar -->
+        <div class="bar flex-container">
+            <div id="copy" class="bar-button tool-tip">
+                <i class="fa fa-clipboard"></i>
+                <span class="tool-tip-text">Copy URL</span>
+            </div>
+            <div class="bar-separator"></div>
+            <div class="bar-button tool-tip">
+                <i id="download" class="fa fa-download"></i>
+                <span class="tool-tip-text">Download</span>
+            </div>
+            <div class="bar-button tool-tip">
+                <i id="upload" class="fa fa-upload"></i>
+                <span class="tool-tip-text">Upload</span>
+            </div>
         </div>
-        <div class="bar-separator"></div>
-        <div class="bar-button tool-tip">
-            <i id="download" class="fa fa-download"></i>
-            <span class="tool-tip-text">Download</span>
-        </div>
-        <div class="bar-button tool-tip">
-            <i id="upload" class="fa fa-upload"></i>
-            <span class="tool-tip-text">Upload</span>
-        </div>
+        <div id="user" class="bar-button bar">Sign Up or Login</div>
     </div>
     <!-- Main toolbar with Drawings Tools -->
     <div class="tool-menu toolbar flex-container canvas-component">
