--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -11,20 +11,20 @@
 <div>
     <canvas id='canvas'></canvas>
     <!-- Header -->
-    <div class="flex-container header-bar canvas-component">
-        <div class="title-menu flex">
+    <div class="top-bar header-bar flex-horizontal canvas-component">
+        <div class="title-menu flex-horizontal">
             <div class="title-box">
                 <input class="canvas-name" type="text" value="Untitled Canvas"/>
                 <div class="title-text">Some words from our sponsors</div>
             </div>
-            <div class="flex dropdown-symbol">
+            <div class="dropdown-symbol">
                 <i class="fa fa-caret-down"></i>
             </div>
         </div>
     </div>
-    <div class="top-right-bar canvas-component flex-container">
+    <div class="top-bar top-right-bar flex-horizontal canvas-component">
         <!-- Copy URL, Upload, and Download Bar -->
-        <div class="bar flex-container">
+        <div class="bar flex-horizontal">
             <div id="copy" class="bar-button tool-tip">
                 <i class="fa fa-clipboard"></i>
                 <span class="tool-tip-text">Copy URL</span>
@@ -39,10 +39,10 @@
                 <span class="tool-tip-text">Upload</span>
             </div>
         </div>
-        <div id="user" class="bar-button bar">Sign Up or Login</div>
+        <div id="signup-login" class="bar bar-button flex-horizontal">Sign Up or Login</div>
     </div>
     <!-- Main toolbar with Drawings Tools -->
-    <div class="tool-menu toolbar flex-container canvas-component">
+    <div class="tool-menu toolbar flex-vertical canvas-component">
         <div id="pen" class="tool-button tool-tip active" (click)="selectPen()">
             <i class="fa fa-pencil">
                 <span class="tool-tip-text">Pen</span>
@@ -60,7 +60,7 @@
                 </div>
                 <span class="tool-tip-text">Colors</span>
             </i>
-            <div class="dropdown-menu flex-container">
+            <div class="dropdown-menu flex-horizontal">
                 <div id="black" class="dropdown-item" style="color:black" (click)="changeColor($event)">
                     <i class="fa fa-circle"></i>
                 </div>
@@ -85,7 +85,7 @@
                 </div>
                 <span class="tool-tip-text">Sizes</span>
             </i>
-            <div class="slider-menu dropdown-menu flex-container">
+            <div class="slider-menu dropdown-menu flex-horizontal">
                 <div id="pen-slider-value" class="slider-value"></div>
                 <div class="slider-box">
                     <input id="pen-size-slider" type="range" class="slider" min="1" max="6" value="2" (input)="changeSize($event)">
@@ -108,17 +108,19 @@
             </i>
         </div>
     </div>
-    <div class="navigation-bar toolbar flex-container canvas-component">
+    <div class="navigation-bar toolbar flex-vertical canvas-component">
         <div id="zoom-in" class="tool-button tool-tip">
-            <i class="fa fa-plus"></i>
+            <i class="fa fa-search-plus"></i>
             <span class="tool-tip-text">Zoom In</span>
         </div>
         <div id="zoom-amount" class="tools-text">100%</div>
         <div id="zoom-out" class="tool-button tool-tip">
-            <i class="fa fa-minus"></i>
+            <i class="fa fa-search-minus"></i>
             <span class="tool-tip-text">Zoom Out</span>
         </div>
-        <div class="tools-separator"></div>
+        <div class="vertical-separator flex-vertical">
+            <div class="tool-separator"></div>
+        </div>
         <div id="move" class="tool-button tool-tip">
             <i class="fa fa-hand-paper-o"></i>
             <span class="tool-tip-text">Move</span>
