Removed unnecessary imports, fixed clear bug that crashed after clearing and undo, canvas has url variable that contains the url.

--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -18,6 +18,9 @@
                 <li>
                     <button (click)="erase()">Eraser</button>
                 </li>
+                <li>
+                    <button (click)="copyURL()">Share</button>
+                </li>
                 <li class="dropdown" appDropdown>
                     <a role="button" class="dropdown-toggle" appDropdown>
                         Colors <span class="caret"></span>
