clicking login button redirects to login page

--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -39,7 +39,7 @@
                 <span class="tool-tip-text">Upload</span>
             </div>
         </div>
-        <div id="signup-login" class="bar bar-button flex-horizontal">Sign Up or Login</div>
+        <div id="signup-login" class="bar bar-button flex-horizontal" (click)="login()">Sign Up or Login</div>
     </div>
     <!-- Main toolbar with Drawings Tools -->
     <div class="tool-menu toolbar flex-vertical canvas-component">
