--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,7 +4,8 @@
     <span class="error" *ngIf="error">{{ error }}</span>
 
   <button (click)="loginFb()" id="fb">Login With Facebook</button><br>
-  <button (click)="loginGoogle()" id="google">Login With Google</button>
+  <button (click)="loginGoogle()" id="google">Login With Google</button><br>
+  <button (click)="Back()">Go Back</button><br>
   <!-- <button routerLink="/login-email" id="email">Email</button> -->
 
   <!-- <a routerLink="/signup" routerLinkActive="active" class="alc">No account? <strong>Create one here</strong></a> -->
