Rearranged/added pen color selection

--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -65,13 +65,19 @@
                 <div id="red" class="dropdown-item" style="color:red" (click)="changeColor($event)">
                     <i class="fa fa-circle"></i>
                 </div>
-                <div id="blue" class="dropdown-item" style="color:blue" (click)="changeColor($event)">
+                <div id="orange" class="dropdown-item" style="color:orange" (click)="changeColor($event)">
+                    <i class="fa fa-circle"></i>
+                </div>
+                <div id="yellow" class="dropdown-item" style="color:yellow" (click)="changeColor($event)">
                     <i class="fa fa-circle"></i>
                 </div>
                 <div id="green" class="dropdown-item" style="color:green" (click)="changeColor($event)">
                     <i class="fa fa-circle"></i>
                 </div>
-                <div id="brown" class="dropdown-item" style="color:brown" (click)="changeColor($event)">
+                <div id="blue" class="dropdown-item" style="color:blue" (click)="changeColor($event)">
+                    <i class="fa fa-circle"></i>
+                </div>
+                <div id="darkMagenta" class="dropdown-item" style="color:darkMagenta" (click)="changeColor($event)">
                     <i class="fa fa-circle"></i>
                 </div>
             </div>
