Click copyURL button to open basic popup modal

--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -25,10 +25,12 @@
     <div class="top-bar top-right-bar flex-horizontal canvas-component">
         <!-- Copy URL, Upload, and Download Bar -->
         <div class="bar flex-horizontal">
-            <div class="bar-button tool-tip" (click)="copyURL()" (mouseleave)="resetTooltip()">
+            <!-- <div class="bar-button tool-tip" (click)="copyURL()" (mouseleave)="resetTooltip()"> -->
+            <div class="bar-button tool-tip" (click)="showShareModal()" (mouseleave)="resetTooltip()">
                 <i class="fa fa-clipboard"></i>
                 <span id="copy-tooltip" class="tool-tip-text">Copy URL</span>
             </div>
+
             <div class="bar-separator"></div>
             <div class="bar-button tool-tip">
                 <i id="download" class="fa fa-download"></i>
@@ -135,6 +137,13 @@
         <div id="num-users" class="bar-button">
             <i class="fa fa-user-circle"></i>
         </div>
+    </div>
+</div>
+<!-- Share Modal -->
+<div id="share-modal" class="modal">
+    <div class="modal-content">
+        <span class="close" (click)="closeShareModal()">&times;</span>
+        <p>Some text in the Modal..</p>
     </div>
 </div>
 </body>
