--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -146,12 +146,17 @@
             <h2>Invite or Join Others</h2>
         </div>
         <div class="modal-body">
-            <div class="modal-text">Current Room URL</div>
-            <input id="room-url" type="text" size="40" readonly>
-            <span id="copy-button" class="bar bar-button" (click)="copyURL()">Copy URL</span>
-            <div class="modal-text">Enter new room</div>
-            <input id="new-room-id" type="text" size="40">
-            <a id="change-room-button" class="bar bar-button" (click)="changeRoom()">Change Room</a>
+            <div class="modal-item">
+                <div class="modal-text">Current Room URL</div>
+                <input id="room-url" type="text" size="40" readonly>
+                <span id="copy-button" class="bar bar-button" (click)="copyURL()">Copy</span>
+            </div>
+            <div class="modal-item">
+                <div class="modal-text">Enter an existing room ID</div>
+                <input id="new-room-id" type="text" maxlength="5" autocomplete="off" (input)="resetError()" >
+                <a id="change-room-button" class="bar bar-button" (click)="changeRoom()">Change Room</a>
+                <div id="error-message" class="error"></div>
+            </div>
         </div>
     </div>
 </div>
