Minor cosmetic changes to share modal
 * Change share icon to a person with a +
 * Make text boxes 75% the modal width
 * Press enter to change rooms

--- a/src/app/canvas/canvas.component.css
+++ b/src/app/canvas/canvas.component.css
@@ -290,6 +290,9 @@ html body {
     color: red;
     font-size: 12px;
 }
+.input-bar {
+    width: 70%;
+}
 .close {
     color: white;
     float: right;
