design rough login page

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,43 +1,131 @@
-#lock {
-    width:40%;
-    margin: 1.5em auto 4em auto;
-    display:block;
-}
-
-#fb {
-    /* background:#3B5998 url('assets/images/facebook.svg') no-repeat 14px 6px; */
-    background-size: 47px;
-    color:#fff;
-}
-
-#google {
-    border: 1px solid #95989A;
-    /* background: #fff  url('assets/images/google.svg') no-repeat 25px; */
-    background-size: 25px;
-}
-
-#email {
-    /* background: #ECECEC  url('assets/images/email.svg') no-repeat 25px; */
-    background-size: 25px;
-}
-
-@media (max-width: 600px) {
-    #page {
-        padding:1em;
+    html body {
+        overflow: auto;
+        background-color: #4CAF50;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
-    #toolbar {
-        width:90%;
-        margin-left: -45%;
+    .flex-container{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
     }
-    #fb {
-        background:#3B5998;
+    .flex-element{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    .flex-element1{
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+    }
+     .main {
+        position:relative;
+        background-color: #555;
+        width: 800px;
+        height: 500px;
+        border-radius: 1.5em;
+        box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 12);
     }
 
-    #google {
-        background: #fff;
+  #fb {
+      background:#3B5998 url('../../assets/facebook.svg') no-repeat -1px -9px;
+      background-size: 50px;
+      color: white;
+      font-weight: 700;
+      font-size: 14px;
+      letter-spacing: 1px;
+      margin-right: 5px;
+      /* padding: 20px 10px; */
+      width: 50px;
+      height: 50px;
+      border: none;
+      border-radius: 50px;
+      outline: none;
+      box-sizing: border-box;
+      border: 2px solid #FFFF;
+      text-align: center;
+      font-family: 'Ubuntu', sans-serif;
+  }
+
+  #google {
+      border: 5px solid #95989A;
+      background: #fff  url('../../assets/google.svg') no-repeat center;
+      background-size: 30px;
+      color: black;
+      font-weight: 700;
+      margin-left: 5px;
+      font-size: 14px;
+      letter-spacing: 1px;
+      width: 50px;
+      height: 50px;
+      border: none;
+      border-radius: 50px;
+      outline: none;
+      box-sizing: border-box;
+      border: 2px solid #4CAF50;
+      text-align: center;
+      font-family: 'Ubuntu', sans-serif;
+  }
+
+    .sign {
+        color: #FFFF;
+        font-family: 'Ubuntu', sans-serif;
+        font-weight: bold;
+        font-size: 50px;
+        margin-bottom: 70px;
     }
 
-    #email {
-        background: #ECECEC;
+    .un {
+      margin-top: 30px;
+      margin-bottom: 10px;
+      color: rgb(38, 50, 56);
+      font-weight: 700;
+      font-size: 14px;
+      letter-spacing: 1px;
+      background: #FFFF;
+      padding: 10px 70px;
+      border: none;
+      border-radius: 20px;
+      outline: none;
+      box-sizing: border-box;
+      border: 2px solid #FFFF;
+      text-align: center;
+      font-family: 'Ubuntu', sans-serif;
     }
-}
+
+    .pass {
+      color: rgb(38, 50, 56);
+      margin-bottom: 10px;
+      font-weight: 700;
+      font-size: 14px;
+      letter-spacing: 1px;
+      background: #FFFF;
+      padding: 10px 70px;
+      border: none;
+      border-radius: 20px;
+      outline: none;
+      box-sizing: border-box;
+      border: 2px solid #FFFF;
+      text-align: center;
+      font-family: 'Ubuntu', sans-serif;
+    }
+
+    .submit {
+      color: white;
+      font-weight: 700;
+      font-size: 14px;
+      letter-spacing: 1px;
+      background: #4CAF50;
+      padding: 10px 50px;
+      border: none;
+      border-radius: 20px;
+      outline: none;
+      box-sizing: border-box;
+      /* border: 2px solid white; */
+      text-align: center;
+      font-family: 'Ubuntu', sans-serif;
+    }
