--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -13,8 +13,8 @@
     <div class="top-bar header-bar flex-horizontal canvas-component">
         <div class="title-menu flex-horizontal">
             <div class="title-box">
-                <input class="canvas-name" type="text" value="Untitled Canvas"/>
-                <div class="title-text">Some words from our sponsors</div>
+                <input id="canvas-name" type="text" autocomplete="off" value="Untitled Canvas"/>
+                <div id="title-text">Welcome to your canvas!</div>
             </div>
             <div class="dropdown-symbol">
                 <i class="fa fa-caret-down"></i>
