New users will see updated canvas name

--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -13,7 +13,7 @@
     <div class="top-bar header-bar flex-horizontal canvas-component">
         <div class="title-menu flex-horizontal">
             <div class="title-box">
-                <input id="canvas-name" type="text" autocomplete="off" value="Untitled Canvas"/>
+                <input id="canvas-name" type="text" autocomplete="off"/>
                 <div id="title-text">Welcome to your canvas!</div>
             </div>
         </div>
