email sign up is working

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,15 +12,32 @@
         <span class="error" *ngIf="error">{{ error }}</span>
         <div class="sign">Drawback</div>
         <div class="flex-element1">
-          <button (click)="loginFb()" id="fb"></button><br>
-          <button (click)="loginGoogle()" id="google"></button>
+          <div (click)="loginFb()" id="fb">
+            <a id='facebook'></a>
+          </div><br>
+          <div (click)="loginGoogle()" id="google"></div>
         </div>
         <div class="flex-element">
           <input class="un" type="text" placeholder="Username">
           <input class="pass" type="password"  placeholder="Password">
           <input class="submit" type="submit" value="Sign in" align="center">
+          <a id='back' style="color: darkblue; cursor: pointer; margin-top: 30px" (click)="showShareModal()">No account? <strong>Create one here</strong></a>
         </div>
     </div>
+
+      <div id="share-modal" class="modal">
+        <div class="modal-content">
+          <span class="close" (click)="closeShareModal()">&times;</span>
+          <div class="flex-element">
+            <div class="signup">Welcome!</div>
+            <form #formData='ngForm' (ngSubmit)="onSubmit(formData)" class="flex-element">
+              <input class="signup-un" type="text" placeholder="Username" (ngModel)="email" name="email" required>
+              <input class="signup-pass" type="password"  placeholder="Password" (ngModel)="password" name="password" required>
+              <button type="submit" [disabled]="!formData.valid" class="signup-submit">Create my account</button>
+            </form>
+          </div>
+        </div>
+      </div>
 
 </body>
 
