--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,6 +1,6 @@
     html body {
         overflow: auto;
-        background-color: #4CAF50;
+        background-color: #78DE7C;
         height: 100vh;
         display: flex;
         align-items: center;
@@ -32,6 +32,7 @@
     }
 
   #fb {
+      cursor: pointer;
       background:#3B5998 url('../../assets/facebook.svg') no-repeat -1px -9px;
       background-size: 50px;
       color: white;
@@ -52,6 +53,7 @@
   }
 
   #google {
+      cursor: pointer;
       border: 5px solid #95989A;
       background: #fff  url('../../assets/google.svg') no-repeat center;
       background-size: 30px;
@@ -129,3 +131,101 @@
       text-align: center;
       font-family: 'Ubuntu', sans-serif;
     }
+
+
+.modal { /* Background of the modal */
+  display: none;
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.modal-content {
+    background-color: #fefefe;
+    /* margin: 5% auto; */
+    /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 800px;
+    height: 500px;
+    /* Could be more or less, depending on screen size */
+}
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+.close:hover .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+.signup{
+  margin-top: 50px;
+  margin-bottom: 30px;
+  color:black;
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: bold;
+  font-size: 50px;
+}
+
+
+.signup-un {
+  margin-top: 50px;
+  margin-bottom: 10px;
+  color: rgb(38, 50, 56);
+  font-weight: 700;
+  font-size: 14px;
+  letter-spacing: 1px;
+  background: #ddd;
+  padding: 10px 70px;
+  border: none;
+  border-radius: 20px;
+  outline: none;
+  box-sizing: border-box;
+  border: 2px solid #FFFF;
+  text-align: center;
+  font-family: 'Ubuntu', sans-serif;
+}
+
+.signup-pass {
+  color: rgb(38, 50, 56);
+  margin-bottom: 10px;
+  font-weight: 700;
+  font-size: 14px;
+  letter-spacing: 1px;
+  background: #ddd;
+  padding: 10px 70px;
+  border: none;
+  border-radius: 20px;
+  outline: none;
+  box-sizing: border-box;
+  border: 2px solid #FFFF;
+  text-align: center;
+  font-family: 'Ubuntu', sans-serif;
+}
+
+.signup-submit {
+  color: white;
+  font-weight: 700;
+  font-size: 14px;
+  letter-spacing: 1px;
+  background: #4CAF50;
+  padding: 10px 50px;
+  border: none;
+  border-radius: 20px;
+  outline: none;
+  box-sizing: border-box;
+  /* border: 2px solid white; */
+  text-align: center;
+  font-family: 'Ubuntu', sans-serif;
+}
