--- a/src/app/canvas/canvas.component.css
+++ b/src/app/canvas/canvas.component.css
@@ -1,9 +1,10 @@
 html body {
     font-family: sans-serif;
     overflow: hidden;
+    height: 100%;
 }
 #canvas {
-    position: absolute;
+    position: relative;
     cursor: crosshair;
 }
 .canvas-component {
