--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -39,7 +39,7 @@
                 <span class="tool-tip-text">Upload</span>
             </div>
         </div>
-        <div id="signup-login" class="bar bar-button flex-horizontal" (click)="authentication()">Sign Up or Login</div>
+        <div id="signup-login" class="bar bar-button flex-horizontal" (click)="authentication()">{{loginButton}}</div>
     </div>
     <!-- Main toolbar with Drawings Tools -->
     <div class="tool-menu toolbar flex-vertical canvas-component">
