--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -229,3 +229,9 @@
   text-align: center;
   font-family: 'Ubuntu', sans-serif;
 }
+
+.error{
+    color:#F33434;
+    font-size: 12px;
+    margin-top: 15px
+}
