error message disappears if user clickes username box or password box

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -19,11 +19,11 @@
         </div>
         <div class="flex-element">
           <form #f='ngForm' (ngSubmit)="loginSubmit(f)" class="flex-element">
-              <input class="un" type="text" placeholder="Username" (ngModel)="email" name="email" required>
-              <input class="pass" type="password"  placeholder="Password" (ngModel)="password" name="password" required>
+              <input (click) = "userClicked()" class="un" type="text" placeholder="Username" (ngModel)="email" name="email" required>
+              <input (click) = "userClicked()" class="pass" type="password"  placeholder="Password" (ngModel)="password" name="password" required>
               <button type="submit" [disabled]="!f.valid" class="submit">Sign in</button>
           </form>
-          <span class="error" *ngIf="error">{{ error }}</span>
+          <span id='error' *ngIf="error" class="error">{{ error }}</span>
           <a id='back' style="color: darkblue; cursor: pointer; margin-top: 15px" (click)="showShareModal()">No account? <strong>Create one here</strong></a>
 
         </div>
@@ -35,8 +35,8 @@
           <div class="flex-element">
             <div class="signup">Welcome!</div>
             <form #formData='ngForm' (ngSubmit)="onSubmit(formData)" class="flex-element">
-              <input class="signup-un" type="text" placeholder="Username" (ngModel)="email" name="email" required>
-              <input class="signup-pass" type="password"  placeholder="Password" (ngModel)="password" name="password" required>
+              <input (click) = "userClicked()" class="signup-un" type="text" placeholder="Username" (ngModel)="email" name="email" required>
+              <input (click) = "userClicked()" class="signup-pass" type="password"  placeholder="Password" (ngModel)="password" name="password" required>
               <button type="submit" [disabled]="!formData.valid" class="signup-submit">Create my account</button>
             </form>
             <span class="error" *ngIf="signupError">{{ signupError }}</span>
